--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "title": "Metronome",
   "description": "Based on an input (integer argument) BPM, you can get a metronome that plays a sound after a certain amount of time.",
   "icon": "command-icon.png",
-  "author": "Visual-Studio-Coder",
+  "author": "raycast-ai-extensions-beta",
   "categories": [
     "Other",
     "Fun"
